apps/production/container-registry/internal/ui/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: container-registry-internal-ui
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: container-registry-internal-ui
  template:
    spec:
      containers:
        - name: container-registry-internal-ui
          image: registry-proxy.local.hejsan.xyz/joxit/docker-registry-ui:2.5.6-debian
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: container-registry-proxy-secret
