apps/production/container-registry/internal/ui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry-internal-ui

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry-internal.local.hejsan.xyz`) && PathPrefix(`/ui`)
      kind: Rule
      services:
        - name: container-registry-internal-ui
          port: http
      middlewares:
        - name: strip-ui-internal-prefix
  tls:
    secretName: local-hejsan-xyz-tls
    namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-ui-internal-prefix
spec:
  stripPrefix:
    prefixes:
      - "/ui"
